# kats-qt-widgets

./: README.md
build-kats-qt-widgets-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-kats-qt-widgets-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-c4f3ef9bae2c2b3414f5.json  cmakeFiles-v1-2faf452e49e6f080c6a9.json  codemodel-v2-6f860f61138808228073.json  directory-.-Debug-32ed5ba07ea16c95b454.json  index-2023-11-23T08-06-01-0906.json  target-kats-qt-widgets-Debug-95deae8e5ee24074acbc.json  target-kats-qt-widgets_autogen-Debug-e1281225cd5d6ad5a881.json  target-kats-qt-widgets_autogen_timestamp_deps-Debug-520417d5f9eae714c01a.json
build-kats-qt-widgets-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-kats-qt-widgets-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: alloc_traits.h.6D38FBAD9E2ECDEF.idx  basic_string.h.71CBF77D5486D0CC.idx  basic_string.tcc.7DFE4B8EC0860E2D.idx  c++config.h.01E1DBCF01BFE0F5.idx  char_traits.h.F96BB0FEF4D0F4B1.idx  chrono.C475391CD86928BA.idx  chrono.h.335DC537E159C611.idx  gentoo-qconfig.h.4E47F0063036A906.idx  hashtable.h.9B7244BF33A8064C.idx  hashtable_policy.h.269F0319FC2589C6.idx  main.cpp.17D108CE239DEAD7.idx  mainwindow.cpp.A55C140CAF236D66.idx  mainwindow.h.A8C1C79887F45A1E.idx  new_allocator.h.D30E73F1B3F4726F.idx  qarraydata.h.53D2572E1C0D1EFA.idx  qatomic.h.ADBAA2521A8715FD.idx  qatomic_cxx11.h.49B350F30A23247F.idx  qbasicatomic.h.4485D5BDA2917285.idx  qbytearray.h.41117DB0E4AD618D.idx  qchar.h.F236869EB1BE396E.idx  qcolor.h.5374123F10834FFC.idx  qconfig.h.1E65CE0946188D1B.idx  qcoreapplication.h.5AD14C5210D2CD05.idx  qdatastream.h.7047B5AEEF50976E.idx  qflags.h.041151B20D342D89.idx  qfont.h.7EAD86E634821A17.idx  qgenericatomic.h.990AA3CE54FAE7BA.idx  qglobal.h.ECF5D53AF1AEFA88.idx  qglobalstatic.h.24B8DFCCE0A14DF1.idx  qhash.h.1AD458BED68F11C0.idx  qhashfunctions.h.C2436122AE2EF58A.idx  qimage.h.634DB9A7289AF787.idx  qkeysequence.h.0C90B80651E1CFDA.idx  qlist.h.287DB7087F4E039E.idx  qlocale.h.E2DBF2177A81E264.idx  qlogging.h.96FA5CB468B23131.idx  qmap.h.2FE652F2AD5730C5.idx  qmargins.h.E1DDC288026B296F.idx  qmatrix.h.3CA24A22FFDB27B8.idx  qmetatype.h.FB0A9A8EBD205E58.idx  (+34 more)
kats-qt-widgets/: CMakeLists.txt
